Refactor clan creation to be done via Elide POST call + other cleanups